[tool.poetry]
name = "livia-streamlit"
version = "0.1.0"
description = ""
authors = ["Bruno Mesquita Zamberlan <brunomesquitazamberlan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.35.0"
streamlit-lottie = "^0.0.5"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
openai = "^1.30.3"
boto3 = "^1.34.113"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
